# bevy

./: Cargo.toml
crates/bevy_drawing/: Cargo.toml
crates/bevy_drawing/src/: lib.rs  system.rs
crates/bevy_drawing/src/drawable/: disk.rs  line.rs  mod.rs  quad.rs  regular_polygon.rs
crates/bevy_drawing/src/shaders/: circle.wgsl  disk.wgsl  line.wgsl  quad.wgsl  regular_polygon.wgsl
crates/bevy_geometry/: Cargo.toml  readme.md
crates/bevy_geometry/src/: lib.rs
crates/bevy_geometry/src/figure/: disk.rs  line.rs  mod.rs  quad.rs  regular_polygon.rs
crates/bevy_internal/: Cargo.toml
crates/bevy_internal/src/: default_plugins.rs  lib.rs  prelude.rs
crates/bevy_render/src/mesh/shape/: circle.rs  cube.rs  disk.rs  mod.rs  plane.rs  quad.rs  regular_polygon.rs
examples/3d/: drawing.rs
